# manifold-robot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  MANIFOLD_API.md  README.md
assets/: main.css  tailwind.css
src/: api.rs  bot.rs  main.rs  ws.rs  xai.rs
